<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >

    <!-- Dialog Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="9dp"
        android:background="@color/colorPrimary"
        android:text="@string/dialog_title"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!-- Dialog Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:background="@color/grey" />

    <!-- Dialog Message Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="9dp" >

        <TextView
            android:id="@+id/txtDialogProcessKilled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/process_killed"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtMemoryCleaned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/memory_cleaned"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtCacheCleaned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/cache_cleaned"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

    </LinearLayout>

    <!-- Dialog OK Button -->
    <Button
        android:id="@+id/btnDialogOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_boost_sel"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_marginLeft="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="23dp"
        android:textStyle="bold"
        android:text="@string/btn_ok" />

</LinearLayout>