<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="9dp" >


        <TextView
            android:id="@+id/txtTaskTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/dialog_title"
            android:textColor="@color/white"
            android:layout_marginLeft="11dp"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Divider -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="9dp"
        android:text="@string/task_msg"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <!-- Button Container -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="11dp"
        android:layout_marginTop="27dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnTaskCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="31dp"
            android:layout_marginRight="31dp"
            android:layout_weight="1"
            android:background="@drawable/button_boost_sel"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnTaskClean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="31dp"
            android:layout_marginRight="31dp"
            android:layout_weight="1"
            android:background="@drawable/button_boost_sel"
            android:text="@string/btn_kill"
            android:textColor="@color/red"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>