<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <RelativeLayout
            android:background="@color/colorPrimaryLight"
            android:layout_width="match_parent"
            android:layout_height="31dp">
            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/fast_chargind_mode"/>
        </RelativeLayout>
        <ImageView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/battery_icon"/>
        <TextView
            android:id="@+id/tv_percentage"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/zero_percent"/>
    </RelativeLayout>
    <LinearLayout
        android:padding="11dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">
            <RelativeLayout
                android:id="@+id/wifi"
                android:background="@color/colorPrimaryLight"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/wifi1"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="9dp"
                    android:src="@drawable/ic_action_network_wif"/>
                <TextView
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/wifi"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/ring"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/ring1"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="9dp"
                    android:src="@drawable/ic_action_volume_o"/>
                <TextView
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/sound"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/gps"
                android:background="@color/colorPrimaryLight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/gps1"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="9dp"
                    android:src="@drawable/selector_icon"/>
                <TextView
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/gps"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">
            <RelativeLayout
                android:id="@+id/blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:weightSum="3">
                <ImageView
                    android:id="@+id/blue1"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="9dp"
                    android:src="@drawable/ic_action_bluetootha"/>
                <TextView
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/bluetooth"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/data"
                android:background="@color/colorPrimaryLight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:weightSum="3">
                <ImageView
                    android:id="@+id/data1"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="9dp"
                    android:src="@drawable/ic_action_import_exporta"/>
                <TextView
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/mobile_data"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/plane"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:weightSum="3">
                <ImageView
                    android:id="@+id/plane1"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="9dp"
                    android:src="@drawable/selector_icon_plane"/>
                <TextView
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/mode_avion"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_weight="3">

        <RelativeLayout
            android:layout_marginLeft="11dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <SeekBar
                android:id="@+id/seekBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/seekbar_progress"
                android:progress="50"
                android:thumb="@drawable/shine_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/brightnes"
                android:textColor="@color/colorPrimary"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/saving_mode"/>
            <ToggleButton
                android:layout_centerInParent="true"
                android:id="@+id/mod1"
                android:layout_width="155dp"
                android:layout_height="63dp"
                android:textOn=""
                android:textOff=""
                android:background="@drawable/checkbox_selector" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:background="@color/colorPrimaryLight"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="13dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/textone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/copyright1"
                android:textColor="@color/white"/>
            <TextView
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyright1"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </RelativeLayout>


    </RelativeLayout>
</LinearLayout>