<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circle="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="4"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryLight"
        android:layout_height="0dp"
        android:layout_weight="3">

        <com.batterysaver.rambooster.view.CircleLayout
            android:id="@+id/main_circle_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            circle:firstChildPosition="South"
            circle:rotateToCenter="true"
            circle:isRotating="true"
            circle:speed="75" >

            <com.batterysaver.rambooster.view.CircleImageView
                android:id="@+id/main_battery"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:src="@mipmap/ic_battery"
                circle:name="@string/batteryactivity" />

            <com.batterysaver.rambooster.view.CircleImageView
                android:id="@+id/main_charger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_charge"
                circle:name="@string/charger" />

            <com.batterysaver.rambooster.view.CircleImageView
                android:id="@+id/main_graph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_statistique"
                circle:name="@string/graph" />

            <com.batterysaver.rambooster.view.CircleImageView
                android:id="@+id/main_taskiller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_task"
                circle:name="@string/taskkiller" />
        </com.batterysaver.rambooster.view.CircleLayout>

        <TextView
            android:id="@+id/main_selected_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="125dp"
            style="@style/AudioFileInfoOverlayTextes"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:layout_centerInParent="true"
            android:layout_width="125dp"
            android:layout_height="57dp"
            android:src="@drawable/battery_icon"/>

        <TextView
            android:id="@+id/textLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="@string/unknown_all_caps"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <LinearLayout
        android:padding="11dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_health"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/health"/>
                        <TextView
                            android:id="@+id/textHealth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:text="@string/unknown_all_caps"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_technology"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:textSize="12sp"
                            android:text="@string/technology"/>
                        <TextView
                            android:id="@+id/textTechnology"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:text="@string/unknown_all_caps"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_temperature"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/temp"/>
                        <TextView
                            android:id="@+id/textTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:text="@string/unknown_all_caps"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:weightSum="3">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_voltage"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/voltage"/>
                        <TextView
                            android:id="@+id/textVoltage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:text="@string/unknown_all_caps"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="3">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status"/>
                        <TextView
                            android:id="@+id/textStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/unknown_all_caps"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="3">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/plugged"/>
                        <TextView
                            android:id="@+id/textPlugged"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/unknown_all_caps"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>